--- a/app/index.html
+++ b/app/index.html
@@ -63,9 +63,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
 
-
-		<paper-slider min="-100" max="100" default="0" value="{{mood}}"></paper-slider>
-		<mood-smiley value="{{mood}}"></mood-smiley>
+		<firebase-collection
+			location="https://amber-fire-5100.firebaseio.com/"
+			data={{mood}}
+												></firebase-collection>
+		<paper-slider min="-100" max="100" default="0" value="{{mood.value}}"></paper-slider>
+		<mood-smiley value="{{mood.value}}"></mood-smiley>
 
   </template>
 
