--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -40,4 +40,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/shared-styles.html">
 
 <link rel="import" href="smiley.html">
+<link rel="import" href="mood-element.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
