--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -25,6 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-slider/paper-slider.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -41,4 +42,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="smiley.html">
 <link rel="import" href="mood-element.html">
-<link rel="import" href="../bower_components/firebase-element/firebase-document.html">
+<link rel="import" href="mood-list.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
