--- a/app/elements/mood-element.html
+++ b/app/elements/mood-element.html
@@ -1,19 +1,23 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="new-mood-element.html">
 
 <dom-module id="mood-element">
 	<template>
-  		<paper-slider min="-100" max="100" default="5" value="{{mood}}"></paper-slider>
-  		<mood-smiley value="{{mood}}"></mood-smiley>
-	</template>
 
+		<new-mood-element on-add-mood="addMoodToFirebase"></new-mood-element>
+	</template>
 	<script>
-	Polymer({
-		is: 'mood-element',
-		properties: {
-			mood: {
-				notify: true
+		Polymer({
+			is: 'mood-element',
+			properties: {
+				moods: Array
+			},
+			addMoodToFirebase: function (e) {
+				this.push('moods', {
+					value: e.detail.value,
+					date: String(new Date())
+				});
 			}
-		},
-	});
+		});
 	</script>
 </dom-module>
