--- a/app/index.html
+++ b/app/index.html
@@ -62,11 +62,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved class="fullbleed layout vertical">
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
-	 <firebase-document
-				location="https://amber-fire-5100.firebaseio.com/proba/"
-				data={{data}}>
-			</firebase-document>
-	<mood-element mood="{{data.mood}}"></mood-element>
+		<firebase-collection
+			location="https://amber-fire-5100.firebaseio.com/"
+			data="{{moods}}">
+		</firebase-collection>
+		<mood-element moods={{moods}}></mood-element>
+		<mood-list moods={{moods}}></mood-list>
 
   </template>
 
