--- a/app/elements/mood-list.html
+++ b/app/elements/mood-list.html
@@ -5,6 +5,7 @@
 		<template is="dom-repeat" items="[[moods]]" as="mood">
 			<h4>[[mood.date]]</h4>
 			<span><paper-slider value=[[mood.value]] disabled></paper-slider>
+			<span>[[mood.location]]</span>
 		</template>
 
 	</template>
