--- a/app/elements/mood-with-smiley.html
+++ b/app/elements/mood-with-smiley.html
@@ -1,15 +1,14 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<dom-module id="new-mood-element">
+<dom-module id="mood-with-smiley">
 	<template>
   		<mood-smiley value="{{mood}}"></mood-smiley>
   		<paper-slider min="-100" max="100" default="5" value="{{mood}}"></paper-slider>
-			<paper-button raised on-tap="addMood">save mood</paper-button>
 	</template>
 
 	<script>
 	Polymer({
-		is: 'new-mood-element',
+		is: 'mood-with-smiley',
 		listeners: {
 			'reset-mood': 'resetMood'
 		},
@@ -17,9 +16,6 @@
 			mood: {
 				notify: true
 			}
-		},
-		addMood: function () {
-			this.fire('add-mood', {value: this.mood});
 		},
 		resetMood: function () {
 			this.mood = 0;
