--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 
-<link rel="import" href="smiley.html">
+<link rel="import" href="mood-smiley.html">
 <link rel="import" href="mood-element.html">
 <link rel="import" href="mood-list.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
