tests for mood with smiley element

--- a/app/elements/mood-with-smiley.html
+++ b/app/elements/mood-with-smiley.html
@@ -2,7 +2,7 @@
 
 <dom-module id="mood-with-smiley">
 	<template>
-  		<mood-smiley value="{{mood}}"></mood-smiley>
+  		<mood-smiley value="[[mood]]"></mood-smiley>
   		<paper-slider min="-100" max="100" default="5" value="{{mood}}"></paper-slider>
 	</template>
 
