--- a/app/test/index.html
+++ b/app/test/index.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
 
     <script>
-      WCT.loadSuites(['mood-smiley.html']);
+      WCT.loadSuites(['mood-smiley.html', 'mood-with-smiley.html']);
     </script>
 
 
